<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devani.ankit.motgagecalculator.InputFragment"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txt_HomeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_Home_Value" />
        <EditText
            android:id="@+id/val_HomeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView7"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/txt_DownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Down_Payment"
        />
    <EditText
        android:id="@+id/val_DownPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView8"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/txt_InterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Interest_Rate" />
    <EditText
        android:id="@+id/val_InterestRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:id="@+id/textView9"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/txt_Terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Terms" />
        <Spinner
            android:id="@+id/val_Terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/terms_arrays"
            android:prompt="@string/Term_prompt"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yrs"
            android:id="@+id/textView10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        android:layout_centerVertical="true"
        android:layout_below="@id/linearLayout3">
    <TextView
        android:id="@+id/txt_PropertyTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Property_Tax_Rate" />
    <EditText
        android:id="@+id/val_PropertyTax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:id="@+id/textView11"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Caluculate"
        android:id="@+id/button"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
