<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="com.devani.ankit.motgagecalculator.OutputFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Payment_ID"
        android:text="@string/txt_Payment"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout5"
        android:layout_below="@id/txt_Payment_ID">
        <TextView
            android:id="@+id/txt_TextPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Tax_Paid" />
        <EditText
            android:id="@+id/val_TextPaid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView14"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txt_InterestPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Interest_Paid"
            />
        <EditText
            android:id="@+id/val_InterestPaid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView12"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7"
        android:layout_below="@+id/linearLayout6"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txt_Monthly_Payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Monthly_Payment_Amount" />
        <EditText
            android:id="@+id/val_Monthly_Payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView13"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8"
        android:layout_below="@+id/linearLayout7"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txt_Pay_Off_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Payoff_Date" />
        <EditText
            android:id="@+id/val_Pay_Off_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>

